# compiler-course-mipt

./: README.md
1. Quadratic equation/: solve_square.cpp
1. Square_eq_solution/: README.md  main.c  solve_square.cpp
2. Eugene Onegin/: Eugene Onegin.cpp  Onegin.cbp  README.md  bred.cpp  defines.h  file_sort.cpp  main.cpp  sort-header.h  sort_func.cpp  tests.cpp
2. Eugene Onegin/Example/: bred.txt  results.txt  source.txt
2. Eugene Onegin/Program results/: bred.txt
3. Text library/: CMakeLists.txt  README.md  Text library.lib  Text_library.cbp  main.cpp  text.h  text_func.cpp
3. Text library/Example/: res.txt
4. Stack/: README.md  Stack_library.cbp  main.cpp  stack.h  stack_func.cpp
4. Stack/Example/: example.txt
5. nCPU/: README.md  enum.h  hash.cpp
5. nCPU/Example/: code.txt  compiled_code.txt  disasm_code.txt  disasm_code_listing.txt  file_listing.txt  output.txt
5. nCPU/Usage example/: file_listing.txt  launch.bat  proga.ncpu  proga.vasm  results.txt
5. nCPU/asm_compiler/: asm_compiler.cbp  compile.cpp  compile.h  compile_func.cpp  compiler_config.h  main.cpp
5. nCPU/disasm_compiler/: commands.h  disasm_compiler.cbp  disasm_func.cpp  disassembler.cpp  main.cpp
5. nCPU/nCPU/: Stack library.lib  cpu.cpp  cpu.h  nCPU.cbp  stack_config.h
6.1. List (array version)/: list.h  list_func.cpp
6.1. List (array version)/Program results/: log_list.txt
6.1. List (massive version)/: README.md  list.cbp  list.h  list_config.h  list_func.cpp  main.cpp
6.1. List (massive version)/Program results/: graph.dot
6.2. List (pointer version)/: README.md  p_list.cbp  p_list.h  p_list_config.h  p_list_func.cpp
6.2. List (pointer version)/Program results/: graph.dot
6.2. List (pointer version)/example/: log_list.txt
7. Akinator/: README.md  TXLib.h  akinator.cbp  akinator.cpp  akinator.h  akinator_config.h  main.cpp  tree.h
7. Akinator/Akinator program/: Link to download the program.txt  akinator_base.txt  graph_base.dot
8. Differentiator/: Differentiator.cbp  README.md  diff.cpp  diff.h  diff_config.h  tree.cpp  tree_optimizer.cpp
8. Differentiator/Example/: formula.txt
8. Differentiator/Working program/: article.tex  formula.txt
9. Programming language/: README.md
9. Programming language/Programming language (C version)/: Programming language (C version).cbp  asm_translator.cpp  differentiator.cpp  language_parsing.cpp  language_parsing.h  main.cpp  tree_optimizer.cpp
9. Programming language/Programming language (C version)/Example/: code.txt  output.txt
9. Programming language/Programming language (frontend)/: Programming language (frontend).cbp  lang_parsing.cpp  language_parsing.h  main.cpp  tree.h  tree_optimizer.cpp  tree_transfer.cpp
9. Programming language/Programming language (frontend)/Example/: proga.txt
9. Programming language/Programming language (frontend^(-1))/: Programming language (frontend^(-1)).cbp  language_parsing.h  main.cpp  tree.h  tree_to_lang.cpp
9. Programming language/Programming language (frontend^(-1))/Example/: lang.txt  tree.txt
9. Programming language/Shiza language/: ShizaLanguage.cbp  asm_translator.cpp  differentiator.cpp  differentiator.h  lang_parsing.cpp  lang_parsing.h  lang_parsing_config.h  main.cpp  tree.h  tree_config.h  tree_optimizer.cpp
9. Programming language/Shiza language/Example/: code.txt  output.txt  shiza.txt
Onegin/: CMakeLists.txt  sort_func.cpp  tests.cpp
akinator/: CMakeLists.txt  README.md  akinator.cpp  akinator_config.h  main.cpp  make.bat  tree.cpp  tree_config.h
akinator/Akinator program/: akinator_base.txt
akinator/src/: TXLib.h  akinator.cpp  akinator.h  akinator_config.h  main.cpp  tree.cpp  tree.h  tree_config.h
differentiator/: README.md  main.cpp  text.h  tree.h
libstack/: CMakeLists.txt  stack.h  stack_func.cpp
libstack/example/: log_stack.txt  main.cpp
libtext/: CMakeLists.txt  README.md
libtext/example/: code.txt
list_array/: CMakeLists.txt  README.md  list.h  list_func.cpp
list_ptr/: CMakeLists.txt  main.cpp  p_list_func.cpp
nCPU/: CMakeLists.txt  README.md
nCPU/asm_compiler/: compile.cpp
nCPU/disasm_compiler/: disasm_func.cpp  disassembler.h  main.cpp
nCPU/nCPU/: cpu.cpp  main.cpp
onegin/: CMakeLists.txt  file_sort.cpp  sort_header.h
quadratic/: CMakeLists.txt  README.md
